hphp/hack/test/typecheck/array/safe_vector_array/disallow_varray_or_darray_where_vect_like_array_is_required.php.exp
File "disallow_varray_or_darray_where_vect_like_array_is_required.php", line 10, characters 21-48:
Invalid argument (Typing[4110])
  File "disallow_varray_or_darray_where_vect_like_array_is_required.php", line 3, characters 28-38:
  Expected `vec<int>`
  File "disallow_varray_or_darray_where_vect_like_array_is_required.php", line 5, characters 40-60:
  But got `vec_or_dict<arraykey, int>`
