hphp/hack/test/typecheck/array/safe_vector_array/disallow_varray_or_darray_where_vect_like_array_is_required.php
<?hh // strict

function consumeArrayOfInt(array<int> $arg): void {}

function provideDarrayOrVarrayOfInt(): varray_or_darray<int> {
  return darray["a" => 0];
}

function test(): void {
  consumeArrayOfInt(provideDarrayOrVarrayOfInt());
}
